LOG OF CHANGES

10/18/2010 Fixed bug in prefix maps
10/17/2010 DatabaseStop now waits for all msgs to complete
10/16/2012 FORMAT CHANGE: Jdbm3 files. Delete and rebuild
10/16/2012 Per server database state now persisted
10/16/2012 new DatabaseState class

10/15/2012 Table config can now specify a resolver
10/15/2012 Add Newest resolver (last writer wins)
10/15/2012 Class VectorClock now public
10/15/2012 Use reflection to find conflict resolvers

10/14/2010 InMemory store now uses Scala immutable collections
10/13/2012 FORMAT CHANGE: Jdbm3 files. Delete and rebuild
10/13/2012 Server config files changes to support store reflection
10/13/2012 Support new local store implementations via reflection
10/13/2012 StoreTables now have control in addition to meta and value
10/13/2012 Reorg store code 

10/12/2012 Fixed problems in beers.data
10/12/2012 Bulk downloader now used in UI
10/11/2012 New wiki page for multiple servers
10/11/2012 Bulk uploader now used by UI
10/10/2012 .gitignore now excludes Scala worksheets 
10/9/2012 New bulk loader with Scala API
10/9/2012 Added back links to client class APIs

10/7/2012 Added new 2-way and 3-way JSON conflict resolver
10/5/2012 Fixed bug in get and all where get=cd, d was wiping out c
10/5/2012 Shutdown not clean now logged warning rather than println
10/5/2012 Check can now do some basic fixes
10/5/2012 Check program now has command line options and a config
10/2/2012 Changed the default Akka client port used by REST from 8011 to 8012
10/2/2012 Check program now checks main tables

9/30/2012 Codes.Locked => Codes.Lock
9/30/2012 Admin commands internal protocol, improve idempotence and conflict detection
9/29/2012 Fixed bug in admin commands (too many servers were being contacted)
9/29/2012 Pretty (JSON pretty printer) faster, cleaner, nicer output

9/26/2012 UI better error reporting for errors from server
9/25/2012 REST server empty 200 response now has body {} (empty not legal Json)